--- a/config.toml
+++ b/config.toml
@@ -41,8 +41,8 @@ googleAnalytics = ""
 	# Hero section
 	[params.hero]
 		# To change the background of the hero section, replace the 'header.jpg' at './static/img' with your own.
-		slogan     = "Your awesome slogan"
-		subtitle   = "[Lorem](//google.com) ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis nesciunt consequatur ut nihil voluptatem fugiat eos eveniet alias in veniam?"
+		slogan     = "Trails We Hike"
+		subtitle   = "We capture hiking, backpacking, and camping experiences in the form of [video/film](//youtube.com/trailswehike), still [photography](//behance.adobe.com), and [acoustic music](//bandcamp.com/trailswehike)."
 		buttonText = "Find out more"
 
 
