Updated config file

--- a/data/projects/2014-07-06-project-2.yaml
+++ b/data/projects/2014-07-06-project-2.yaml
@@ -1,8 +1,8 @@
 modalID: 2
-title: Project 2
-date: 2014-07-06
-img: 2.jpg
-client: Start Bootstrap
+title: Jim
+date: 2016-11-22
+img: CastleRock-Jim_at_End-Photo.jpg
+client: Castle Rock
 clientLink: "#"
-category: Web Development
+category: Castle Rock
 description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel enim aliquid dicta ullam in repellendus amet perspiciatis adipisci architecto obcaecati sit voluptas ipsam, deleniti neque placeat tenetur cum tempore velit.
