--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://trailswehike.github.io/"
+baseurl = "https://www.trailswehike.com/"
 languageCode = "en-us"
 title = "Trails We Hike"
 theme = "hugo-creative-theme"
@@ -29,54 +29,124 @@ googleAnalytics = ""
 
 	# Navigation
 	[params.navigation]
-		brand = "Hugo Creative Theme"
+		brand = "Trails We Hike"
 
 		[params.navigation.links]
 			about     = "About"
-			services  = "Services"
+			services  = "Social Media"
 			portfolio = "Portfolio"
+			timeline  = "Timeline"
+			team      = "Team"
 			contact   = "Contact"
 
 
 	# Hero section
 	[params.hero]
 		# To change the background of the hero section, replace the 'header.jpg' at './static/img' with your own.
-		slogan     = "Trails We Hike"
-		subtitle   = "We capture hiking, backpacking, and camping experiences in the form of [video/film](//youtube.com/trailswehike), still [photography](//behance.adobe.com), and [acoustic music](//bandcamp.com/trailswehike)."
 		buttonText = "Find out more"
 
 
 	# About section
 	[params.about]
-		headline    = "We're Trails We Hike"
+		headline    = "Trails We Hike"
 		description = "We're **Trails We Hike**, folks dedicated to capturing camping, backpacking, and hiking experiences and publishing them in as many forms as possible"
-		buttonText  = "Get started!"
+		buttonText  = "Check Out Our Portfolio!"
 
+	# Timeline section
+	[params.timeline]
+	    enable = true
+	    title = "Timeline"
+	    subtitle = "Here is a list of videos of recent hiking experiences"
+	    endpoint = "Where should we go next?"
+	    endlink ="mailto:info@trailswehike.com"
+	
+	    # The events will be listed from the top to the bottom.
+	    # All images are stored under 'static/img/about'.
+	    # Replace them with your own.
+	    [[params.timeline.events]]
+	      img = "Uintas-CleggLake-Still-web-small_square.jpg"
+	      date = "Sep 2, 2016"
+	      title = "The High Uintas"
+	      link = "#portfolioModal1"
+	      description = "Bald Mountain trailhead to Crystal Lake trailhead, and lunch along the way at Lake Ibantik."
+	
+	    [[params.timeline.events]]
+	      img = "CastleRock-Jim_at_End-Photo-web-small_square.jpg"
+	      date = "Nov 22, 2016"
+	      title = "Castle Rock Falls Overlook"
+	      link = "#portfolioModal2"
+	      description = "We visit Castle Rock State Park and take a short hike to the overlook at the falls."
+	
+	    [[params.timeline.events]]
+	      img = "BigBasin-LinearBridge-web-small_square.jpg"
+	      date = "November 27, 2016"
+	      title = "Big Basin State Park"
+	      link = "#portfolioModal3"
+	      description = "We hike the Skyline trail to the connector to the Sunset trail."
+	
 
 	# Service section
 	[params.services]
-		headline = "At your service"
+		headline = "Social Media"
 
         [[params.services.list]]
-            icon = "fa-diamond"
-            title = "Sturdy Templates"
-            description = "Our templates are updated regularly so they don't break."
+            icon = "fa-youtube"
+            title = "You Tube"
+            link = "https://www.youtube.com/channel/UCzy_THI0vc42g-6Fh2p40yw"
+            description = "Our Youtube channel is updated regularly."
 
         [[params.services.list]]
-			icon = "fa-paper-plane"
-			title = "Ready to Ship"
-			description = "You can use this theme as is, or you can make changes!"
+			icon = "fa-facebook"
+			title = "Facebook"
+            link = "https://www.facebook.com/trailswehike"
+			description = "A place to interact with us and other members of the Trails We Hike community."
 
 		[[params.services.list]]
-            icon = "fa-newspaper-o"
-            title = "Up to Date"
-            description = "We update dependencies to keep things fresh."
+            icon = "fa-github"
+            title = "GitHub"
+            link = "https://www.github.com/trailswehike"
+            description = "We develop all of our textual content on github, including the code from this site and the scripts for ou videos."
 
         [[params.services.list]]
-            icon = "fa-heart"
-            title = "Made with Love"
-            description = "You have to make your websites with love these days!"
+            icon = "fa-bandcamp"
+            title = "Bandcamp"
+            link = "https://trailswehike.bandcamp.com"
+            description = "All of the music from our videos can be found on bandcamp."
 
+	# Team section
+	[params.team]
+	    enable = true
+	    # Possibility to center items
+	    center = true
+	    title = "The Trails We Hike Team"
+	    #subtitle = "Lorem ipsum dolor sit amet consectetur."
+	    #description = "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde."
+	
+	    # All team member's pictures are stored under 'static/img/team'.
+	    # Replace them with your own too.
+	    # Suggestion: Image size should be at least 360px*360px or the alignment might be affected.
+	    [[params.team.members]]
+	      img = "jim-web-small_square.jpg"
+	      name = "Jim Smyth"
+	      position = "Gonzo Journalist"
+	      ## For bio markdown and even multiline strings are available.
+	      #bio = """Jim is a lorem ipsum dolor. Yadda yadda yadda."""
+	      social = [
+	        ["fa-twitter", "https://twitter.com/TA_KIT_EZ"],
+	        ["fa-instagram", "https://www.instagram.com/jim_trailswehike"],
+	        ["fa-github", "https://github.com/jsmyth"]
+	      ]
+	
+	    [[params.team.members]]
+	      img = "jpruitt-web-small_square.png"
+	      name = "Jeremy Pruitt"
+	      position = "Narrates the Green Line"
+	      ## For bio markdown and even multiline strings are available.
+	      #bio = """Jim is a lorem ipsum dolor. Yadda yadda yadda."""
+	      social = [
+	        ["fa-twitter", "https://twitter.com/jeremypruitt"],
+	        ["fa-github", "https://github.com/jeremypruitt"]
+	      ]
 
     # Portfolio modals
 	[params.portfolio.modal]
@@ -87,18 +157,17 @@ googleAnalytics = ""
 
     # Aside section
 	[params.aside]
-		headline = "Get the Creative Theme for Hugo"
+		headline = "Sign up for our newsletter!"
 
 		[params.aside.button]
-			text = "Download now"
-			link = "//github.com/digitalcraftsman/hugo-creative-theme"
+			text = "Subscribe"
+			link = "mailto:subscribe@trailswehike.com"
 
 	# Contact section
 	[params.contact]
-		headline = "Let's Get In Touch!"
-		description = "Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!"
-		phone = "123-456-6789"
-		email = "feedback@trailswehike.com"
+		headline = "Questions & Comments"
+		description = "Have any questions or comments? Send us an email and we will get back to you as soon as possible!"
+		email = "info@trailswehike.com"
 
 	# Google Maps section
 	# [params.location]
