--- a/data/projects/2014-07-07-project-3.yaml
+++ b/data/projects/2014-07-07-project-3.yaml
@@ -1,8 +1,8 @@
 modalID: 3
-title: Project 3
-date: 2014-07-07
-img: 3.jpg
-client: Start Bootstrap
+title: The High Uintas
+date: 2016-11-27
+img: Uintas-CleggLake-Still.jpg
+client: The High Uintas
 clientLink: "#"
-category: Web Development
+category: Hiking
 description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel enim aliquid dicta ullam in repellendus amet perspiciatis adipisci architecto obcaecati sit voluptas ipsam, deleniti neque placeat tenetur cum tempore velit.
